[tool.poetry]
name = "usda_aerial"
version = "0.0.1"
description = "Spray Atomization Models from the USDA Aerial Application Technology Research Unit"
authors = ["gill14 <59205277+gill14@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
